--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "commonjs",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "nodemon index.js"
   },
